Add .idea configuration files, refactor tab titles, and enhance FreeShootingSession component with progress tracking

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -4,10 +4,7 @@
     "Error": "Error",
     "Save Progress": "Save Progress",
     "Select a zone": "Select a zone",
-    "Shots Made": "Shots Made",
-    "Shots Attempted": "Shots Attempted",
     "Save": "Save",
-    "Start": "Start",
     "Stop": "Stop",
     "Next": "Next",
     "Pause": "Pause",
@@ -27,7 +24,6 @@
     "Experience Feedback Form": "Experience Feedback Form",
     "minutes": "minutes",
     "seconds": "seconds",
-    "exercises": "exercises",
     "Select a workout:": "Select a workout:",
     "Progress saved successfully.": "Progress saved successfully.",
     "Failed to save progress.": "Failed to save progress.",
@@ -72,7 +68,6 @@
     "Pound Dribble": "Pound Dribble",
     "Improves ball control and strength by dribbling the ball hard and fast.": "Improves ball control and strength by dribbling the ball hard and fast.",
     "Dribble the ball as hard as possible, alternating hands every 10 dribbles.": "Dribble the ball as hard as possible, alternating hands every 10 dribbles.",
-    "Keep your back straight and knees slightly bent.": "Keep your back straight and knees slightly bent.",
     "Use your fingers to control the ball, not your palm.": "Use your fingers to control the ball, not your palm.",
     "Look straight ahead, not at the ball.": "Look straight ahead, not at the ball.",
     "Front/Back Dribble": "Front/Back Dribble",
@@ -82,9 +77,7 @@
     "Use your wrists for better ball control.": "Use your wrists for better ball control.",
     "Practice at different speeds to improve your responsiveness.": "Practice at different speeds to improve your responsiveness.",
     "Between the Legs": "Between the Legs",
-    "Improves your ability to protect the ball from defenders and change direction.": "Improves your ability to protect the ball from defenders and change direction.",
     "Dribble the ball between your legs. Change diagonals every 10 dribbles.": "Dribble the ball between your legs. Change diagonals every 10 dribbles.",
-    "Keep your knees bent to facilitate the movement.": "Keep your knees bent to facilitate the movement.",
     "Use a quick and smooth motion to pass the ball between your legs.": "Use a quick and smooth motion to pass the ball between your legs.",
     "Focus on ball control to avoid turnovers, not speed.": "Focus on ball control to avoid turnovers, not speed.",
     "Behind the Back": "Behind the Back",
@@ -94,7 +87,6 @@
     "Use a quick and smooth motion to pass the ball behind your back.": "Use a quick and smooth motion to pass the ball behind your back.",
     "Stay low when dribbling for better ball protection and easier direction changes.": "Stay low when dribbling for better ball protection and easier direction changes.",
     "Wrap Around (no dribble)": "Wrap Around (no dribble)",
-    "Improves your ability to perform behind-the-back dribbles quickly.": "Improves your ability to perform behind-the-back dribbles quickly.",
     "Pass the ball around your legs as quickly as possible.": "Pass the ball around your legs as quickly as possible.",
     "If you struggle to dribble around your legs, start at the waist and progress to the legs.": "If you struggle to dribble around your legs, start at the waist and progress to the legs.",
     "Try to keep the ball as close to your body as possible.": "Try to keep the ball as close to your body as possible.",
@@ -154,5 +146,31 @@
     "Click on the CC button in the video player to enable captions" : "Click on the CC button in the video player to enable captions",
     "Warming up without a Ball": "Warming up without a Ball",
     "Dribble routine": "Routine de dribble",
-    "Killer Crossover": "Killer Crossover"
+    "Killer Crossover": "Killer Crossover",
+    "Workouts": "Workouts",
+    "Masterclass": "Masterclass",
+    "Ball handling": "Ball handling",
+    "Shooting": "Shooting",
+    "Finishing": "Finishing",
+    "Learning moves": "Learning moves",
+    "Strength & conditionning": "Strength & conditioning",
+    "Custom workouts": "Custom workouts",
+    "Tim hardaway teaches his Killer Crossover": "Tim hardaway teaches his Killer Crossover",
+    "Floaters": "Floaters",
+    "Euro Step": "Euro Step",
+    "Michael Jordan masterclass": "Michael Jordan masterclass",
+    "Magic Johnson masterclass ( features Jabbar, Smith, Hamilton and McKnight)": "Magic Johnson masterclass ( features Jabbar, Smith, Hamilton and McKnight)",
+    "Kyrie Irving teaching fundamentals": "Kyrie Irving teaching fundamentals",
+    "Kyrie Irving teaching moves and footwork": "Kyrie Irving teaching moves and footwork",
+    "Strength exercices": "Strength exercices",
+    "Stamina workout": "Stamina workout",
+    "Scottie Barnes full workout": "Scottie Barnes full workout",
+    "Learn Allen Iverson's crossover with coach Drew Hanlen": "Learn Allen Iverson's crossover with coach Drew Hanlen",
+    "Steph Curry explains where to aim when shooting": "Steph Curry explains where to aim when shooting",
+    "Warmup for vertical jump": "Warmup for vertical jump",
+    "Post player warmup": "Post player warmup",
+    "Shooting coaching with Sean Sweeney": "Shooting coaching with Sean Sweeney",
+    "Thank you for your feedback!": "Thank you for your feedback!",
+    "Failed to submit feedback. Please try again later.": "Failed to submit feedback. Please try again later.",
+    "An error occurred. Please try again later.": "An error occurred. Please try again later."
 }
