--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -43,8 +43,6 @@
     "Dribble Challenge:": "Desafío de dribbling:",
     "Best time:": "Mejor tiempo:",
     "Average time:": "Tiempo promedio:",
-    "Shots Made": "Tiros realizados",
-    "Shots Attempted": "Tiros intentados",
     "Success Rate": "Tasa de éxito",
     "Reset stats": "Restablecer estadísticas",
     "3PT - Left Corner": "3PT - Esquina izquierda",
@@ -63,8 +61,6 @@
     "Number of 3-pointers successfully recorded!": "¡Número de triples registrados con éxito!",
     "Complete the following dribbling exercises as quickly as possible.": "Completa los siguientes ejercicios de dribbling lo más rápido posible.",
     "Time successfully submitted!": "¡Tiempo enviado con éxito!",
-    "Start": "Comenzar",
-    "exercises": "ejercicios",
     "No video available": "No hay video disponible",
     "Instructions": "Descripción",
     "Objective": "Objetivo",
@@ -83,7 +79,6 @@
     "Use your wrists for better ball control.": "Usa tus muñecas para un mejor control del balón.",
     "Practice at different speeds to improve your responsiveness.": "Practica a diferentes velocidades para mejorar tu capacidad de respuesta.",
     "Between the Legs": "Entre las piernas",
-    "Improves your ability to protect the ball from defenders and change direction.": "Mejora tu capacidad para proteger el balón de los defensores y cambiar de dirección.",
     "Dribble the ball between your legs. Change diagonals every 10 dribbles.": "Dribla el balón entre tus piernas. Cambia de diagonal cada 10 dribles.",
     "Keep your knees bent to facilitate the movement.": "Mantén las rodillas dobladas para facilitar el movimiento.",
     "Use a quick and smooth motion to pass the ball between your legs.": "Usa un movimiento rápido y suave para pasar el balón entre tus piernas.",
@@ -91,7 +86,6 @@
     "Behind the Back": "Detrás de la espalda",
     "Improves your ability to protect the ball from defenders and change direction.": "Mejora tu capacidad para proteger el balón de los defensores y cambiar de dirección.",
     "Dribble the ball behind your back, changing hands each time. Change diagonals every 10 dribbles.": "Dribla el balón detrás de tu espalda, cambiando de mano cada vez. Cambia de diagonal cada 10 dribles.",
-    "Keep your back straight and knees slightly bent.": "Mantén la espalda recta y las rodillas ligeramente dobladas.",
     "Use a quick and smooth motion to pass the ball behind your back.": "Usa un movimiento rápido y suave para pasar el balón detrás de tu espalda.",
     "Stay low when dribbling for better ball protection and easier direction changes.": "Mantente bajo al driblar para una mejor protección del balón y cambios de dirección más fáciles.",
     "Wrap Around (no dribble)": "Wrap Around (sin driblar)",
@@ -143,5 +137,31 @@
     "List of all drills": "Lista de todos los ejercicios",
     "Warming up without a Ball": "Calentamiento sin balón",
     "dribble routine": "Rutina de dribbling",
-    "Curry's Fast Shot release": "Lanzamiento rápido de Curry"
+    "Curry's Fast Shot release": "Lanzamiento rápido de Curry",
+    "Workouts": "Entrenamientos",
+    "Masterclass": "Clase magistral",
+    "Ball handling": "Manejo del balón",
+    "Shooting": "Tiro",
+    "Finishing": "Finalización",
+    "Learning moves": "Aprender movimientos",
+    "Strength & conditionning": "Fuerza y acondicionamiento",
+    "Custom Workouts": "Entrenamientos personalizados",
+    "Tim hardaway teaches his Killer Crossover": "Tim Hardaway enseña su Killer Crossover",
+    "Floaters": "Floaters",
+    "Euro Step": "Euro Step",
+    "Michael Jordan masterclass": "Clase magistral de Michael Jordan",
+    "Magic Johnson masterclass ( features Jabbar, Smith, Hamilton and McKnight)": "Clase magistral de Magic Johnson (con Jabbar, Smith, Hamilton y McKnight)",
+    "Kyrie Irving teaching fundamentals": "Kyrie Irving enseña los fundamentos",
+    "Kyrie Irving teaching moves and footwork": "Kyrie Irving enseña movimientos y juego de pies",
+    "Strength exercices": "Ejercicios de fuerza",
+    "Stamina workout": "Entrenamiento de resistencia",
+    "Scottie Barnes full workout": "Entrenamiento completo de Scottie Barnes",
+    "Learn Allen Iverson's crossover with coach Drew Hanlen": "Aprende el crossover de Allen Iverson con el entrenador Drew Hanlen",
+    "Steph Curry explains where to aim when shooting": "Steph Curry explica dónde apuntar al tirar",
+    "Warmup for vertical jump": "Calentamiento para el salto vertical",
+    "Post player warmup": "Calentamiento para jugadores de poste",
+    "Shooting coaching with Sean Sweeney": "Entrenamiento de tiro con Sean Sweeney",
+    "Thank you for your feedback!": "¡Gracias por tus comentarios!",
+    "Failed to submit feedback. Please try again later.": "Error al enviar comentarios. Por favor, inténtelo de nuevo más tarde.",
+    "An error occurred. Please try again later.": "Ocurrió un error. Por favor, inténtelo de nuevo más tarde."
 }
