--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -44,8 +44,6 @@
     "Dribble Challenge:": "Dribble Challenge:",
     "Best time:": "Meilleur temps:",
     "Average time:": "Temps Moyen:",
-    "Shots Made": "Tirs réussis",
-    "Shots Attempted": "Tirs tentés",
     "Success Rate": "Pourcentage de réussite",
     "Reset stats": "Réinitialiser les statistiques",
     "3PT - Left Corner": "3PT - Coin Gauche",
@@ -63,9 +61,6 @@
     "No record this time. Try again!": "Pas de record cette fois-ci. Essayez encore!",
     "Number of 3-pointers successfully recorded!": "Nombre de 3 points enregistré avec succès!",
     "Complete the following dribbling exercises as quickly as possible.": "Fais les exercices de dribble suivant le plus vite possible.",
-    "Time successfully submitted!": "Temps envoyé avec succès!",
-    "Start": "Commencer",
-    "exercises": "exercices",
     "No video available": "Pas de vidéo disponible",
     "Instructions": "Description",
     "Objective": "Objectif",
@@ -74,7 +69,6 @@
     "Pound Dribble": "Dribble fort",
     "Improves ball control and strength by dribbling the ball hard and fast.": "Améliore le contrôle de la balle et la force en dribblant la balle fort et rapidement.",
     "Dribble the ball as hard as possible, alternating hands every 10 dribbles.": "Dribblez la balle aussi fort que possible, en alternant les mains tous les 10 dribbles.",
-    "Keep your back straight and knees slightly bent.": "Gardez le dos droit et les genoux légèrement fléchis.",
     "Use your fingers to control the ball, not your palm.": "Utilisez vos doigts pour contrôler la balle, pas votre paume.",
     "Look straight ahead, not at the ball.": "Regardez droit devant vous, pas la balle.",
     "Front/Back Dribble": "Dribble avant/arrière",
@@ -84,7 +78,6 @@
     "Use your wrists for better ball control.": "Utilisez vos poignets pour un meilleur contrôle de la balle.",
     "Practice at different speeds to improve your responsiveness.": "Pratiquez à différentes vitesses pour améliorer votre réactivité.",
     "Between the Legs": "Entre les jambes",
-    "Improves your ability to protect the ball from defenders and change direction.": "Améliore votre capacité à protéger la balle des défenseurs et à changer de direction.",
     "Dribble the ball between your legs. Change diagonals every 10 dribbles.": "Dribblez la balle entre vos jambes. Changez de diagonale tous les 10 dribbles.",
     "Keep your knees bent to facilitate the movement.": "Gardez les genoux fléchis pour faciliter le mouvement.",
     "Use a quick and smooth motion to pass the ball between your legs.": "Utilisez un mouvement rapide et fluide pour passer la balle entre vos jambes.",
@@ -102,9 +95,7 @@
     "Try to keep the ball as close to your body as possible.": "Essayez de garder la balle aussi près de votre corps que possible.",
     "Maintain a steady rhythm to improve your coordination and control.": "Maintenez un rythme régulier pour améliorer votre coordination et votre contrôle.",
     "Figure 8 (no dribble)": "Figure 8 (sans dribble)",
-    "Improves your ability to perform behind-the-back dribbles quickly.": "Améliore votre capacité à effectuer des dribbles derrière le dos rapidement.",
     "Dribble the ball in a figure 8 between your legs.": "Dribblez la balle en forme de 8 entre vos jambes.",
-    "Keep your knees bent to facilitate the movement.": "Gardez les genoux fléchis pour faciliter le mouvement.",
     "Use a quick and smooth motion to dribble in a figure 8.": "Utilisez un mouvement rapide et fluide pour dribbler en forme de 8.",
     "Focus on ball control to avoid turnovers.": "Concentrez-vous sur le contrôle de la balle pour éviter les pertes de balle.",
     "Wrap Around (with dribble)": "Wrap Around (avec dribble)",
@@ -160,5 +151,31 @@
     "Curry's Fast Shot release": "Tir rapide de Curry",
     "Defensive Stance drill": "Exercice de posture défensive",
     "Behind the back pass": "Passe derrière le dos",
-    "Find YOUR shooting pocket": "Trouvez VOTRE poche de tir"
+    "Find YOUR shooting pocket": "Trouvez VOTRE poche de tir",
+    "Workouts": "Entraînements",
+    "Masterclass": "Masterclass",
+    "Ball handling": "Dribble",
+    "Shooting": "Tir",
+    "Finishing": "Finition",
+    "Learning moves": "Apprendre des moves",
+    "Strength & conditionning": "Force et conditionnement",
+    "Custom workouts": "Entraînements personnalisés",
+    "Tim hardaway teaches his Killer Crossover": "Tim Hardaway enseigne son Killer Crossover",
+    "Floaters": "Floaters",
+    "Euro Step": "Euro Step",
+    "Michael Jordan masterclass": "Masterclass de Michael Jordan",
+    "Magic Johnson masterclass ( features Jabbar, Smith, Hamilton and McKnight)": "Masterclass de Magic Johnson (avec Jabbar, Smith, Hamilton et McKnight)",
+    "Kyrie Irving teaching fundamentals": "Kyrie Irving enseigne les fondamentaux",
+    "Kyrie Irving teaching moves and footwork": "Kyrie Irving enseigne les mouvements et le jeu de jambes",
+    "Strength exercices": "Exercices de force",
+    "Stamina workout": "Entraînement d'endurance",
+    "Scottie Barnes full workout": "Entraînement complet de Scottie Barnes",
+    "Learn Allen Iverson's crossover with coach Drew Hanlen": "Apprenez le crossover d'Allen Iverson avec l'entraîneur Drew Hanlen",
+    "Steph Curry explains where to aim when shooting": "Steph Curry explique où viser lors du tir",
+    "Warmup for vertical jump": "Échauffement pour le saut vertical",
+    "Post player warmup": "Échauffement pour les joueurs de poste",
+    "Shooting coaching with Sean Sweeney": "Coaching de tir avec Sean Sweeney",
+    "Thank you for your feedback!": "Merci pour vos commentaires!",
+    "Failed to submit feedback. Please try again later.": "Échec de l'envoi des commentaires. Veuillez réessayer plus tard.",
+    "An error occurred. Please try again later.": "Une erreur s'est produite. Veuillez réessayer plus tard."
 }
