--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -163,5 +163,6 @@
     "Shooting coaching with Sean Sweeney": "Entrenamiento de tiro con Sean Sweeney",
     "Thank you for your feedback!": "¡Gracias por tus comentarios!",
     "Failed to submit feedback. Please try again later.": "Error al enviar comentarios. Por favor, inténtelo de nuevo más tarde.",
-    "An error occurred. Please try again later.": "Ocurrió un error. Por favor, inténtelo de nuevo más tarde."
+    "An error occurred. Please try again later.": "Ocurrió un error. Por favor, inténtelo de nuevo más tarde.",
+    "Congratulations! Workout completed!":"¡Felicidades! ¡Entrenamiento completado!"
 }
