--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -164,5 +164,27 @@
     "Thank you for your feedback!": "¡Gracias por tus comentarios!",
     "Failed to submit feedback. Please try again later.": "Error al enviar comentarios. Por favor, inténtelo de nuevo más tarde.",
     "An error occurred. Please try again later.": "Ocurrió un error. Por favor, inténtelo de nuevo más tarde.",
-    "Congratulations! Workout completed!":"¡Felicidades! ¡Entrenamiento completado!"
+    "Congratulations! Workout completed!": "¡Felicidades! ¡Entrenamiento completado!",
+    "All Drills, Videos and Workouts": "Todos los ejercicios",
+    "resetStatsTitle": "Restablecer estadísticas",
+    "resetStatsMessage": "¿Estás seguro de que deseas restablecer tus estadísticas? Esta acción no se puede deshacer.",
+    "cancel": "Cancelar",
+    "ok": "Aceptar",
+    "resultsSaved": "Resultados guardados",
+    "minutesPlaceholder": "minutos",
+    "secondsPlaceholder": "segundos",
+    "bestTime": "Mejor tiempo",
+    "averageTime": "Tiempo promedio",
+    "save": "Guardar",
+    "bestReps": "Mejor repetición",
+    "averageReps": "Repetición promedio",
+    "repsPlaceholder": "repetición",
+    "bestWeight": "Mejor peso",
+    "averageWeight": "Peso promedio",
+    "weightPlaceholder": "peso",
+    "previous": "Anterior",
+    "next": "Siguiente",
+    "What did you think of the drills?": "¿Qué opinas de los ejercicios?",
+    "What are your general thoughts on the app?": "¿Qué opinas en general de la aplicación?",
+    "What changes / upgrades would you like to see?": "¿Qué cambios / mejoras te gustaría ver?"
 }
