--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -183,5 +183,28 @@
         "failed": "Échec de l'envoi du retour. Veuillez réessayer plus tard.",
         "error": "Une erreur s'est produite. Veuillez réessayer plus tard."
     },
-    "Congratulations! Workout completed!"   : "Félicitations! Entraînement terminé!"
+    "Congratulations! Workout completed!"   : "Félicitations! Entraînement terminé!",
+    "All Drills, Videos and Workouts": "Tous les exercices",
+    "resetStatsTitle": "Réinitialiser les statistiques",
+    "resetStatsMessage": "Êtes-vous sûr de vouloir réinitialiser toutes vos statistiques?",
+    "cancel": "Annuler",
+    "ok": "OK",
+    "resultsSaved": "Résultats sauvegardés",
+    "minutesPlaceholder": "minutes",
+    "secondsPlaceholder": "secondes",
+    "bestTime": "Meilleur temps",
+    "averageTime": "Temps moyen",
+    "save": "Sauvegarder",
+    "bestReps": "Meilleur nombre de répétitions",
+    "averageReps": "Nombre moyen de répétitions",
+    "repsPlaceholder": "répétitions",
+    "bestWeight": "Meilleur poids",
+    "averageWeight": "Poids moyen",
+    "weightPlaceholder": "kg",
+    "previous": "Précédent",
+    "next": "Suivant",
+    "Start Workout": "Commencer",
+    "What did you think of the drills?": "Qu'avez-vous pensé des exercices?",
+    "What are your general thoughts on the app?": "Quels sont vos avis généraux sur l'application?",
+    "What changes / upgrades would you like to see?": "Quels changements / améliorations aimeriez-vous voir?"
 }
